# pico-train

./: .gitmodules  CLAUDE.md  CMakeLists.txt
circuits/: CMakeLists.txt  circuits.cpp  locos.cpp  locos.h
libraries/: CMakeLists.txt
sensor2_log/: CMakeLists.txt  sensor2_log.cpp
speeds/: CMakeLists.txt  speeds.cpp
stops/: CMakeLists.txt  config.h  stops.cpp
throttle/: CMakeLists.txt  fb_gpio_cfg.h  throttle.cpp  ts_gpio_cfg.h
uncouple_test/: CMakeLists.txt  uncouple_test.cpp
